# use_space_vmm-

./: CMakeCache.txt  CMakeLists.txt  License.txt  Makefile  Readme.md  cmake_install.cmake  main.c
scripts/: cmake-tools.sh
vmm/core /: config.ini
vmm/core /Initialization/: features.md  pre_initialization_checks.c  type_definitions.h
vmm/core/Initialization/: pre_initialization.h  pre_initialization_checks.c  type_definitions.h
